Update the plot_title from Total trip length .. by land to Total trip length .. in land

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -463,7 +463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality= \"Total trip length (\" + label_units_lower + \") covered by each mode by land\"\n",
+    "plot_title_no_quality= \"Total trip length (\" + label_units_lower + \") covered by each mode in land\"\n",
     "file_name =f\"total_trip_length_land{file_suffix}\"\n",
     "\n",
     "try:\n",
