update plot scripts

--- a/viz_scripts/Spatial_viz.ipynb
+++ b/viz_scripts/Spatial_viz.ipynb
@@ -246,6 +246,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "program = \"usaid_laos_ev\"\n",
     "expanded_ct, file_suffix, quality_text, debug_df = await scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
