updates to spatial viz notebook to count points

--- a/viz_scripts/Spatial_viz.ipynb
+++ b/viz_scripts/Spatial_viz.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%conda install geopandas"
+    "# %conda install geopandas"
    ]
   },
   {
@@ -31,9 +31,9 @@
     "\n",
     "# %conda install geopandas\n",
     "\n",
-    "import geopandas as gpd\n",
+    "# import geopandas as gpd\n",
     "from collections import defaultdict\n",
-    "import shapely as shp\n",
+    "# import shapely as shp\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline\n",
@@ -730,11 +730,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4a75dbe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#get number of points (will take a while)\n",
+    "all_trip_traj_points = get_trajectory_points(all_trips)\n",
+    "print(len(all_trip_traj_points))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "c9aeea02",
    "metadata": {},
    "outputs": [],
    "source": [
     "points_map_objects(earlt_testing_all_points)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f8c1239",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#counting!!\n",
+    "edb.get_analysis_timeseries_db().count_documents({\"metadata.key\": \"analysis/recreated_location\"})"
    ]
   },
   {
