mode and purpose updates

--- a/viz_scripts/mode_purp_charts.ipynb
+++ b/viz_scripts/mode_purp_charts.ipynb
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f993fa15",
+   "id": "9a37055d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,16 +29,8 @@
     "import scaffolding\n",
     "from uuid import UUID\n",
     "\n",
-    "# %conda install geopandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9a37055d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# %conda install geopandas\n",
+    "\n",
     "# import geopandas as gpd\n",
     "from collections import defaultdict\n",
     "# import shapely as shp\n",
@@ -702,7 +694,9 @@
     "plt.subplots_adjust(bottom=0.25)\n",
     "plt.xticks(rotation=35, ha='right')\n",
     "plt.legend([])\n",
-    "print(grouped_data['user_id'].nunique(), \"men\")"
+    "print(grouped_data['user_id'].nunique(), \"men\")\n",
+    "\n",
+    "man_mode_data = grouped_data.copy()"
    ]
   },
   {
@@ -743,33 +737,64 @@
     "plt.subplots_adjust(bottom=0.25)\n",
     "plt.xticks(rotation=35, ha='right')\n",
     "plt.legend([])\n",
-    "print(grouped_data['user_id'].nunique(), \"women\")"
+    "print(grouped_data['user_id'].nunique(), \"men\")\n",
+    "\n",
+    "woman_mode_data = grouped_data.copy()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d79d0380",
+   "id": "d06cbe06",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#combined box plot\n",
-    "men_mode[\"gender\"] = \"Man\"\n",
-    "women_mode[\"gender\"] = \"Woman\"\n",
-    "combined_mode = pd.concat([men_mode, women_mode])\n",
-    "combined_mode.head()\n",
-    "plot_title = 'Percentage of Mode Choice for Each User'\n",
-    "ylab = 'Percentage of trips'\n",
-    "sns.boxplot(x=\"Mode_confirm\", y=\"percentage\",\n",
-    "            hue=\"gender\", palette=[\"m\", \"g\"],\n",
-    "            data=combined_mode, showfliers=False).set(title=plot_title, xlabel='', ylabel=ylab)\n",
-    "sns.despine(offset=10, trim=True)"
+    "man_mode_data = man_mode_data.rename(columns={\"percentage\": \"Man\"})\n",
+    "woman_mode_data = woman_mode_data.rename(columns={\"percentage\": \"Woman\"})\n",
+    "\n",
+    "combined_mode_data = pd.concat([man_mode_data, woman_mode_data])\n",
+    "combined_mode_data = combined_mode_data.drop(columns=['user_id', 'count'])\n",
+    "\n",
+    "combined_mode_data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cbc5b21",
+   "id": "1f232e5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_mode_data=pd.melt(combined_mode_data,id_vars=['Mode_confirm'],value_vars=['Man','Woman'],var_name='Gender')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d32dcdd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_mode_data = combined_mode_data.rename(columns={\"value\": \"Percentage\"})\n",
+    "combined_mode_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce54f558",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.boxplot(x='Mode_confirm',y='Percentage',data=combined_mode_data,hue='Gender')\n",
+    "\n",
+    "# combined_mode_data.boxplot(by='Mode_confirm')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2d05f1e",
    "metadata": {},
    "outputs": [],
    "source": []
