add documentation to scripts

--- a/viz_scripts/mode_purp_charts.ipynb
+++ b/viz_scripts/mode_purp_charts.ipynb
@@ -1,13 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d970a929",
+   "cell_type": "markdown",
+   "id": "00b24ef3",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Gender mode and purpose correlations"
+    "# Gender mode and purpose correlations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7cef876",
+   "metadata": {},
+   "source": [
+    "Data needs: Mongodump of trip data, csv with all demographics responses"
    ]
   },
   {
@@ -29,11 +35,7 @@
     "import scaffolding\n",
     "from uuid import UUID\n",
     "\n",
-    "# %conda install geopandas\n",
-    "\n",
-    "# import geopandas as gpd\n",
     "from collections import defaultdict\n",
-    "# import shapely as shp\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline\n",
@@ -194,7 +196,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#workaround for custom labels :)\n",
+    "# #workaround for custom labels :)\n",
+    "#TODO: remove and just use underlying labels\n",
     "def mapping_labels(dynamic_labels, label_type):\n",
     "    if \"translations\" in dynamic_labels and \"en\" in dynamic_labels[\"translations\"]:\n",
     "        translations = dynamic_labels[\"translations\"][\"en\"]\n",
@@ -217,6 +220,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1df388aa",
+   "metadata": {},
+   "source": [
+    "## Load data and match with surveys"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "8e6dadd3",
@@ -227,7 +238,7 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
-    "                                                                            dynamic_labels=dynamic_labels,\n",
+    "                                                                            labels=dynamic_labels,\n",
     "                                                                            include_test_users=include_test_users)"
    ]
   },
@@ -287,6 +298,14 @@
    "outputs": [],
    "source": [
     "data.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6eb3076",
+   "metadata": {},
+   "source": [
+    "## Group data by gender of traveler"
    ]
   },
   {
@@ -366,8 +385,9 @@
    "outputs": [],
    "source": [
     "## code from minipilot vs full pilot regular / commute trip split -- has better labels!!\n",
+    "#TODO: use scaffolding colors and underlying labels\n",
     "mode_colors, purpose_colors = mapping_color_labels(dynamic_labels, dic_re, dic_pur)\n",
-    "\n",
+    "print(mode_colors)\n",
     "\n",
     "width = 0.8\n",
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
@@ -459,7 +479,7 @@
     "fig_data = plot_data.copy()\n",
     "\n",
     "# plt.set_cmap('tab20')\n",
-    "\n",
+    "#TODO: debug this chart\n",
     "for purp in pd.unique(fig_data.Purpose):\n",
     "    band_data = fig_data[fig_data['Purpose']==purp]\n",
     "    \n",
