remove extra code

--- a/viz_scripts/Spatial_viz.ipynb
+++ b/viz_scripts/Spatial_viz.ipynb
@@ -29,11 +29,9 @@
     "import scaffolding\n",
     "from uuid import UUID\n",
     "\n",
-    "# %conda install geopandas\n",
-    "\n",
-    "# import geopandas as gpd\n",
+    "import geopandas as gpd\n",
     "from collections import defaultdict\n",
-    "# import shapely as shp\n",
+    "import shapely as shp\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline\n",
@@ -251,12 +249,10 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
-    "                                                                            dynamic_labels=dynamic_labels,\n",
+    "                                                                            dynamic_labels,\n",
     "                                                                            include_test_users=include_test_users)\n",
     "tq = scaffolding.get_time_query(year, month)\n",
-    "all_trips = await scaffolding.load_all_participant_trips(program, tq, False)\n",
-    "\n",
-    "# (year, month, program, study_type, dynamic_labels, dic_re, dic_pur=None, include_test_users=False)"
+    "all_trips = await scaffolding.load_all_participant_trips(program, tq, False, dynamic_labels)"
    ]
   },
   {
@@ -899,7 +895,7 @@
    "outputs": [],
    "source": [
     "tq = scaffolding.get_time_query(year, month)\n",
-    "all_trips = await scaffolding.load_all_participant_trips('usaid-laos-ev', tq, False)\n",
+    "all_trips = await scaffolding.load_all_participant_trips('usaid-laos-ev', tq, False, dynamic_labels)\n",
     "\n",
     "all_trips = all_trips[all_trips['start_ts'] > 1700438400]\n",
     "all_trips[\"user_id_str\"] = all_trips.user_id.apply(lambda u: str(u))\n",
@@ -1021,13 +1017,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "expanded_ct, file_suffix, quality_text, debug_df = scaffolding.load_viz_notebook_data(year,\n",
+    "expanded_ct, file_suffix, quality_text, debug_df = await scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
-    "                                                                            dynamic_labels=dynamic_labels,\n",
-    "                                                                            dic_re=dic_re,\n",
-    "                                                                            dic_pur=dic_pur,\n",
+    "                                                                            dynamic_labels,\n",
     "                                                                            include_test_users=include_test_users)"
    ]
   },
@@ -1225,272 +1219,6 @@
     "print(len(men_work_geo_end_points))\n",
     "make_basic_heatmap(men_work_geo_end_points)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4f7bed9b",
-   "metadata": {},
-   "source": [
-    "## Experimenting with whether we can associate other fields with the start_end_loc points"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c592371",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start_loc_df = trip_program_df[[\"program\", \"mode_confirm\", \"start_loc\"]].copy()\n",
-    "start_loc_df[\"type\"] = [\"start\"] * len(start_loc_df)\n",
-    "start_loc_df.rename(columns = {\"start_loc\": \"location\"}, inplace=True)\n",
-    "start_loc_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f170fa3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "end_loc_df = trip_program_df[[\"program\", \"mode_confirm\", \"end_loc\"]].copy()\n",
-    "end_loc_df[\"type\"] = [\"end\"] * len(end_loc_df)\n",
-    "end_loc_df.rename(columns = {\"end_loc\": \"location\"}, inplace=True)\n",
-    "end_loc_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "032f2aa1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loc_program_df = gpd.GeoDataFrame(start_loc_df.append(end_loc_df))\n",
-    "loc_program_geodf = loc_program_df.set_geometry(loc_program_df['location'].apply(lambda p: shp.geometry.Point(p['coordinates'])), crs=\"EPSG:4269\")\n",
-    "loc_program_geodf.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f2f4731",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "program_endpoints_within = loc_program_geodf[loc_program_geodf.within(denver_boundary.geometry.iloc[0])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5df9eeb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "program_endpoints_within.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57634730",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax_arr = plt.subplots(nrows=1, ncols=3, sharex=True, sharey=True, figsize=(12,6))\n",
-    "denver_boundary.boundary.plot(ax=ax_arr[0])\n",
-    "program_endpoints_within.plot(column=\"program\", cmap=\"tab10\", ax=ax_arr[0])\n",
-    "denver_boundary.boundary.plot(ax=ax_arr[1])\n",
-    "program_endpoints_within.query('mode_confirm == \"pilot_ebike\"').plot(column=\"program\", cmap=\"tab10\", ax=ax_arr[1])\n",
-    "denver_boundary.boundary.plot(ax=ax_arr[2])\n",
-    "program_endpoints_within.query('mode_confirm == \"drove_alone\" | mode_confirm == \"shared_ride\" | mode_confirm == \"taxi\"').plot(column=\"program\", cmap=\"tab10\", ax=ax_arr[2])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c0699e03",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "other_programs_endpoints_within_query = program_endpoints_within.query('program != \"sc\" & program != \"prepilot\" & program != \"stage\"')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3af682b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax_arr = plt.subplots(nrows=1, ncols=5, sharex=True, sharey=True, figsize=(20,10))\n",
-    "denver_boundary.boundary.plot(ax=ax_arr[0])\n",
-    "other_programs_endpoints_within_query.plot(column=\"program\", cmap=\"tab10\", categories=other_programs_endpoints_within_query.program.unique(), ax=ax_arr[0], legend=True, legend_kwds={\"loc\": \"lower left\"})\n",
-    "ax_arr[0].set_title(\"all\")\n",
-    "denver_boundary.boundary.plot(ax=ax_arr[1])\n",
-    "other_programs_endpoints_within_query.query('mode_confirm == \"pilot_ebike\"').plot(column=\"program\", cmap=\"tab10\", categories=other_programs_endpoints_within_query.program.unique(), ax=ax_arr[1], legend=True, legend_kwds={\"loc\": \"lower left\"})\n",
-    "ax_arr[1].set_title(\"e-bike\")\n",
-    "denver_boundary.boundary.plot(ax=ax_arr[2])\n",
-    "other_programs_endpoints_within_query.query('mode_confirm == \"drove_alone\"').plot(column=\"program\", cmap=\"tab10\", categories=other_programs_endpoints_within_query.program.unique(), ax=ax_arr[2], legend=True, legend_kwds={\"loc\": \"lower left\"})\n",
-    "ax_arr[2].set_title(\"drove_alone\")\n",
-    "denver_boundary.boundary.plot(ax=ax_arr[3])\n",
-    "other_programs_endpoints_within_query.query('mode_confirm == \"shared_ride\"').plot(column=\"program\", cmap=\"tab10\", categories=other_programs_endpoints_within_query.program.unique(), ax=ax_arr[3], legend=True, legend_kwds={\"loc\": \"lower left\"})\n",
-    "ax_arr[3].set_title(\"shared_ride\")\n",
-    "denver_boundary.boundary.plot(ax=ax_arr[4])\n",
-    "other_programs_endpoints_within_query.query('mode_confirm == \"taxi\"').plot(column=\"program\", cmap=\"tab10\", categories=other_programs_endpoints_within_query.program.unique(), ax=ax_arr[4], legend=True, legend_kwds={\"loc\": \"lower left\"})\n",
-    "ax_arr[4].set_title(\"taxi\")\n",
-    "# ax_arr[0].legend([\"denver\"] + other_programs_endpoints_within_query.program.unique().tolist(), loc=\"lower left\", bbox_to_anchor=(0.5, 0.5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99227243",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "program_endpoints_within.to_file(\"ceo_results/program_endpoints_within_denver\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ceaa2ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "program_endpoints_within.to_csv(\"ceo_results/program_endpoints_within_denver.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60eadb3a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc_pixel_stats_to_export = sc_pixel_stats.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2d96a1f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc_pixel_stats_to_export = sc_pixel_stats_to_export.astype({\"e_bike_better\": bool, \"e_bike_gt_50_pct\": bool})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "21f2d99c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc_pixel_stats_to_export.to_file(\"ceo_results/sc_pixel_stats\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f71e2691",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prepilot_pixel_stats_to_export = prepilot_pixel_stats.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fb659b2c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prepilot_pixel_stats_to_export = prepilot_pixel_stats_to_export.astype({\"e_bike_better\": bool, \"e_bike_gt_50_pct\": bool})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fa51bf39",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prepilot_pixel_stats_to_export.to_file(\"ceo_results/prepilot_pixel_stats\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "612a31a7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc_pixel_stats.to_csv(\"ceo_results/sc_pixel_stats.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "815d2bb2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prepilot_pixel_stats.to_csv(\"ceo_results/prepilot_pixel_stats.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3ff2b62",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "other_programs_pixel_stats_to_export = other_programs_pixel_stats.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90943b1c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "other_programs_pixel_stats_to_export = other_programs_pixel_stats_to_export.astype({\"e_bike_better\": bool, \"e_bike_gt_50_pct\": bool})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "64f1d3a0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "other_programs_pixel_stats_to_export.to_file(\"ceo_results/other_programs_pixel_stats\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5683fbc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "other_programs_pixel_stats.to_csv(\"ceo_results/other_programs_pixel_stats.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "01016aa6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
