Add labels as the first param for function call to scaffolding.mapping_color_labels(labels, unique_keys). Without labels, it leads to keyError for labels[MODE].

--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -98,7 +98,7 @@
     "        expanded_ct[\"primary_mode\"] = expanded_ct.ble_sensed_summary.apply(lambda md: max(md[\"distance\"], key=md[\"distance\"].get))\n",
     "        unique_keys = expanded_ct.groupby(\"primary_mode\").agg({distance_col: \"count\"}).index\n",
     "        print(unique_keys)\n",
-    "        colors_mode, colors_replaced, colors_purpose, colors_sensed, colors_ble = scaffolding.mapping_color_labels(unique_keys) #Extract ble color mapping\n",
+    "        colors_mode, colors_replaced, colors_purpose, colors_sensed, colors_ble = scaffolding.mapping_color_labels(labels, unique_keys) #Extract ble color mapping\n",
     "        colors_sensed = colors_ble\n",
     "except ValueError as e:\n",
     "    print(\"Got ValueError \", e)"
