Realign the assignment to file_name and plot_title_no_quality from display_total_CO2_emissions(). In case of exception to the try block in these, these assignment would fail. Thus rolling back to assignment of it from the previous block on the code in notebook from energy impact. Therefore, the file of sketch_CO2impact_{mode_of_interest} was missing while there was exception in energy impact chart generation.

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -203,10 +203,7 @@
     "    ebco2 = ebco2.sort_values(by=[f'total_{weight_unit}_CO2_emissions'], ascending=False)\n",
     "    return ebco2\n",
     "\n",
-    "def display_total_CO2_emissions(data_eb, weight_unit, weight_unit_debug, mode_of_interest):\n",
-    "    plot_title_no_quality=f\"Sketch of Total {weight_unit} of CO2 Emissions of {mode_of_interest} trips\"\n",
-    "    file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
-    "    \n",
+    "def display_total_CO2_emissions(data_eb, weight_unit, weight_unit_debug, mode_of_interest):    \n",
     "    ebco2 = ebco2_compute(data_eb, weight_unit)\n",
     "    net_CO2_emissions = round(sum(ebco2[f'total_{weight_unit}_CO2_emissions']), 2)\n",
     "    ebco2['boolean'] = ebco2[f'total_{weight_unit}_CO2_emissions'] > 0\n",
@@ -229,9 +226,12 @@
     "            scaffolding.print_CO2_emission_calculations(data_eb, ebco2, ebco2_debug, labels)\n",
     "\n",
     "try:\n",
+    "    file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
     "    if use_imperial:\n",
+    "        plot_title_no_quality=f\"Sketch of Total lb of CO2 Emissions of {mode_of_interest} trips\"\n",
     "        display_total_CO2_emissions(data_eb,'lb','kg', mode_of_interest)\n",
     "    else:\n",
+    "        plot_title_no_quality=f\"Sketch of Total kg of CO2 Emissions of {mode_of_interest} trips\"\n",
     "        display_total_CO2_emissions(data_eb,'kg','lb', mode_of_interest)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
