rename values_to_translations to values_to_translations_mode; value_to_translations_purpose to values_to_translations_purpose

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -97,7 +97,7 @@
     "\n",
     "expanded_ct = scaffolding.unpack_energy_emissions(expanded_ct) if \"mode_confirm_footprint\" in expanded_ct.columns else expanded_ct\n",
     "\n",
-    "values_to_translations, value_to_translations_purpose, values_to_translations_replaced = scaffolding.translate_values_to_labels(labels)"
+    "values_to_translations_mode, values_to_translations_purpose, values_to_translations_replaced = scaffolding.translate_values_to_labels(labels)"
    ]
   },
   {
