--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "colors_mode, colors_replaced, colors_purpose, colors_sensed, colors_ble  = scaffolding.mapping_color_labels(labels)\n",
-    "values_to_translations, values_to_translations_purpose, values_to_translations_replaced = scaffolding.translate_values_to_labels(labels)"
+    "values_to_translations_mode, values_to_translations_purpose, values_to_translations_replaced = scaffolding.translate_values_to_labels(labels)"
    ]
   },
   {
