remove units in the column names

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -95,7 +95,7 @@
     "                                                                            include_test_users=include_test_users,\n",
     "                                                                            add_footprint=True)\n",
     "\n",
-    "expanded_ct = scaffolding.unpack_energy_emissions(expanded_ct) if \"mode_confirm_footprint\" in expanded_ct.columns else expanded_ct\n",
+    "expanded_ct = scaffolding.unpack_energy_emissions(expanded_ct, use_imperial) if \"mode_confirm_footprint\" in expanded_ct.columns else expanded_ct\n",
     "\n",
     "values_to_translations_mode, values_to_translations_purpose, values_to_translations_replaced = scaffolding.translate_values_to_labels(labels)"
    ]
@@ -164,14 +164,14 @@
     "file_name =f'sketch_energy_impact_{mode_of_interest}%s' % file_suffix\n",
     "    \n",
     "try:\n",
-    "    ebei=data_eb.groupby('replaced_mode_w_other').agg({'Energy_Impact(kWH)': ['sum', 'mean']},)\n",
-    "    ebei.columns = ['Sketch of Total Energy_Impact(kWH)', 'Sketch of Average Energy_Impact(kWH)']\n",
+    "    ebei=data_eb.groupby('replaced_mode_w_other').agg({'Energy_Impact': ['sum', 'mean']},)\n",
+    "    ebei.columns = ['Sketch of Total Energy_Impact', 'Sketch of Average Energy_Impact']\n",
     "    ebei= ebei.reset_index()\n",
-    "    ebei = ebei.sort_values(by=['Sketch of Total Energy_Impact(kWH)'], ascending=False)\n",
-    "    ebei['boolean'] = ebei['Sketch of Total Energy_Impact(kWH)'] > 0\n",
-    "    net_energy_saved = round(sum(ebei['Sketch of Total Energy_Impact(kWH)']), 2)\n",
+    "    ebei = ebei.sort_values(by=['Sketch of Total Energy_Impact'], ascending=False)\n",
+    "    ebei['boolean'] = ebei['Sketch of Total Energy_Impact'] > 0\n",
+    "    net_energy_saved = round(sum(ebei['Sketch of Total Energy_Impact']), 2)\n",
     "\n",
-    "    x = ebei['Sketch of Total Energy_Impact(kWH)']\n",
+    "    x = ebei['Sketch of Total Energy_Impact']\n",
     "    y = ebei['replaced_mode_w_other']\n",
     "    color =ebei['boolean']\n",
     "    plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_energy_saved}(kWH)\\n\"+quality_text\n",
@@ -197,21 +197,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ebco2_compute(data_eb, weight_unit):\n",
-    "    ebco2=data_eb.groupby('replaced_mode_w_other').agg({f'CO2_Impact({weight_unit})': ['sum', 'mean']},)\n",
-    "    ebco2.columns = [f'total_{weight_unit}_CO2_emissions', f'average_{weight_unit}_CO2_emission']\n",
+    "def ebco2_compute(data_eb):\n",
+    "    ebco2=data_eb.groupby('replaced_mode_w_other').agg({f'CO2_Impact': ['sum', 'mean']},)\n",
+    "    ebco2.columns = [f'total_CO2_emissions', f'average_CO2_emission']\n",
     "    ebco2 = ebco2.reset_index()\n",
-    "    ebco2 = ebco2.sort_values(by=[f'total_{weight_unit}_CO2_emissions'], ascending=False)\n",
+    "    ebco2 = ebco2.sort_values(by=[f'total_CO2_emissions'], ascending=False)\n",
     "    return ebco2\n",
     "\n",
     "def display_total_CO2_emissions(data_eb, weight_unit, weight_unit_debug, mode_of_interest):\n",
     "    plot_title_no_quality=f\"Sketch of Total {weight_unit} of CO2 Emissions of {mode_of_interest} trips\"\n",
     "    file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
     "    \n",
-    "    ebco2 = ebco2_compute(data_eb, weight_unit)\n",
-    "    net_CO2_emissions = round(sum(ebco2[f'total_{weight_unit}_CO2_emissions']), 2)\n",
-    "    ebco2['boolean'] = ebco2[f'total_{weight_unit}_CO2_emissions'] > 0\n",
-    "    x = ebco2[f'total_{weight_unit}_CO2_emissions']\n",
+    "    ebco2 = ebco2_compute(data_eb)\n",
+    "    net_CO2_emissions = round(sum(ebco2[f'total_CO2_emissions']), 2)\n",
+    "    ebco2['boolean'] = ebco2[f'total_CO2_emissions'] > 0\n",
+    "    x = ebco2[f'total_CO2_emissions']\n",
     "    y = ebco2['replaced_mode_w_other']\n",
     "    xLabel = f'CO2 Emissions ({weight_unit})'\n",
     "    yLabel = 'Replaced Mode'\n",
@@ -223,7 +223,7 @@
     "\n",
     "    # For debugging: Computing and displaying Total CO2 emissions in both Metric(kg) and Imperial(lb) unit system for easy comparison.\n",
     "    if (is_debug_mode == True):\n",
-    "        ebco2_debug = ebco2_compute(data_eb, weight_unit_debug)\n",
+    "        ebco2_debug = ebco2_compute(data_eb)\n",
     "        if (weight_unit == 'kg'):\n",
     "            scaffolding.print_CO2_emission_calculations(data_eb, ebco2_debug, ebco2, labels)\n",
     "        else:\n",
@@ -256,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
