--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -87,7 +87,7 @@
     "                                                                            labels,\n",
     "                                                                            include_test_users=include_test_users,\n",
     "                                                                            add_footprint=True)\n",
-    "expanded_ct = scaffolding.unpack_energy_emissions(expanded_ct) if \"mode_confirm_footprint\" in expanded_ct.columns else expanded_ct\n",
+    "expanded_ct = scaffolding.unpack_energy_emissions(expanded_ct, use_imperial) if \"mode_confirm_footprint\" in expanded_ct.columns else expanded_ct\n",
     "\n",
     "expanded_ct_sensed, file_suffix_sensed, quality_text_sensed, debug_df_sensed = await scaffolding.load_viz_notebook_sensor_inference_data(year,\n",
     "                                                                            month,\n",
@@ -112,13 +112,7 @@
    "source": [
     "# Get timestamp from known year/month/day aggregated to days\n",
     "sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day', distance_col]\n",
-    "\n",
-    "if use_imperial:\n",
-    "#     sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance_miles']\n",
-    "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['mode_confirm_w_other','mode_confirm_EI(kWH)','mode_confirm_lb_CO2']\n",
-    "else:\n",
-    "#     sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance']\n",
-    "    sel_cols_with_label_dep = sel_cols_no_label_dep + ['mode_confirm_w_other','mode_confirm_EI(kWH)','mode_confirm_kg_CO2']\n",
+    "sel_cols_with_label_dep = sel_cols_no_label_dep + ['mode_confirm_w_other','mode_confirm_EI','mode_confirm_CO2']\n",
     "\n",
     "if len(expanded_ct) == 0:\n",
     "    data = expanded_ct.copy()\n",
@@ -154,21 +148,21 @@
    },
    "outputs": [],
    "source": [
-    "def compute_daily_metrics(data, weight_unit, distance_unit):\n",
+    "def compute_daily_metrics(data, distance_unit):\n",
     "    # Sum daily distance traveled for each mode\n",
     "    mode_distance = data.groupby(['user_id','date_time','mode_confirm_w_other'], as_index=False)[[distance_unit]].sum()\n",
     "    mode_distance.rename(columns={'sum':distance_unit}, inplace=True)\n",
     "    mode_distance[distance_unit] = mode_distance[distance_unit].fillna(0)\n",
     "    \n",
     "    # Sum daily emissions for each user\n",
-    "    emissions = data.groupby(['user_id','date_time'], as_index=False)[[f'mode_confirm_{weight_unit}_CO2', distance_unit]].sum()\n",
-    "    emissions[f'mode_confirm_{weight_unit}_CO2'] = emissions[f'mode_confirm_{weight_unit}_CO2'].fillna(0)\n",
-    "    emissions[distance_unit] = emissions[f'mode_confirm_{weight_unit}_CO2'].fillna(0)\n",
+    "    emissions = data.groupby(['user_id','date_time'], as_index=False)[[f'mode_confirm_CO2', distance_unit]].sum()\n",
+    "    emissions[f'mode_confirm_CO2'] = emissions[f'mode_confirm_CO2'].fillna(0)\n",
+    "    emissions[distance_unit] = emissions[f'mode_confirm_CO2'].fillna(0)\n",
     "    \n",
     "    # Sum daily energy for each user\n",
-    "    energy = data.groupby(['user_id','date_time'], as_index=False)[['mode_confirm_EI(kWH)', distance_unit]].sum()\n",
-    "    energy['mode_confirm_EI(kWH)'] = energy['mode_confirm_EI(kWH)'].fillna(0)\n",
-    "    energy[distance_unit] = energy['mode_confirm_EI(kWH)'].fillna(0)\n",
+    "    energy = data.groupby(['user_id','date_time'], as_index=False)[['mode_confirm_EI', distance_unit]].sum()\n",
+    "    energy['mode_confirm_EI'] = energy['mode_confirm_EI'].fillna(0)\n",
+    "    energy[distance_unit] = energy['mode_confirm_EI'].fillna(0)\n",
     "    \n",
     "    # Add 7-day rolling avg smoothing to better see trends\n",
     "    mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','mode_confirm_w_other'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
@@ -187,7 +181,7 @@
     "        # Count the number of trips for each confirmed mode\n",
     "        mode_counts = data.groupby(['user_id','date_time','mode_confirm_w_other'], as_index=False).size()\n",
     "        mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
-    "        mode_counts, mode_distance, emissions, energy = compute_daily_metrics( data, weight_unit = weight_unit, distance_unit = distance_col)"
+    "        mode_counts, mode_distance, emissions, energy = compute_daily_metrics( data, distance_unit = distance_col)"
    ]
   },
   {
@@ -215,7 +209,7 @@
     "\n",
     "def plot_emission_per_week(emissions, unit, active_users):\n",
     "    # Emissions per week across all users (net impact)\n",
-    "    plot_data = emissions.groupby(['date_time'], as_index=False)[f'mode_confirm_{unit}_CO2'].agg(['sum'])\n",
+    "    plot_data = emissions.groupby(['date_time'], as_index=False)[f'mode_confirm_CO2'].agg(['sum'])\n",
     "    total_sum = plot_data['sum'].sum()\n",
     "    plot_data = plot_data.merge(active_users, on='date_time')\n",
     "    plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
@@ -250,7 +244,7 @@
     "\n",
     "try:\n",
     "    # Energy per week across all users (net impact)\n",
-    "    plot_data = energy.groupby(['date_time'], as_index=False)['mode_confirm_EI(kWH)'].agg(['sum'])\n",
+    "    plot_data = energy.groupby(['date_time'], as_index=False)['mode_confirm_EI'].agg(['sum'])\n",
     "    plot_data = plot_data.merge(active_users, on='date_time')\n",
     "    plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
@@ -282,7 +276,7 @@
     "def plot_emissions_per_distance_day(emissions, weight_unit, distance_unit, distance_unit_smooth,):\n",
     "    # Emissions per kilometer per day across all users (travel efficiency)\n",
     "    # Note that the energy plot will be identical to this one since scale factor is divided out\n",
-    "    emissions[f'CO2_per_{distance_unit}'] = emissions[f'mode_confirm_{weight_unit}_CO2'] / emissions[f'{distance_unit_smooth}']\n",
+    "    emissions[f'CO2_per_{distance_unit}'] = emissions[f'mode_confirm_CO2'] / emissions[f'{distance_unit_smooth}']\n",
     "    emissions[f'CO2_per_{distance_unit}'] = emissions[f'CO2_per_{distance_unit}'].fillna(0)\n",
     "    plot_data = emissions.groupby(['date_time'])[f'CO2_per_{distance_unit}'].agg(['mean']).reset_index()\n",
     "    \n",
@@ -442,7 +436,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.21"
   }
  },
  "nbformat": 4,
